# linkup

.github/workflows/: ci.yml  deploy-docs.yml  release-next.yml  release.yml
linkup/: Cargo.toml
linkup-cli/src/commands/: health.rs
linkup-cli/src/commands/status/: health.rs  mod.rs
linkup-clients/src/: https_client.rs  lib.rs
linkup/src/: lib.rs  machine_fingerprint.rs
local-server/: Cargo.toml
local-server/src/: lib.rs
local-server/src/handlers/: proxy.rs
server-tests/tests/: helpers.rs  ws_test.rs
