[package]
name = "linkup-local-server"
version.workspace = true
edition = "2024"

[lib]
name = "linkup_local_server"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "http2", "json", "tokio"] }
http = { workspace = true }
hyper = "1.8.1"
hyper-util = { version = "0.1.10", features = ["tokio"] }
linkup = { workspace = true }
linkup-clients = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "signal", "rt-multi-thread"] }
url = { workspace = true }

axum-server = { version = "0.8.0", features = ["tls-rustls"] }
hickory-server = { version = "0.26.1", features = ["resolver"] }
rcgen = { version = "0.14.8", features = ["x509-parser"] }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["trace"] }
